# slab.rs

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  DIAGNOSTICS.md  MODULE.bazel  Makefile.toml  README.md  README_zh.md  diagnose-backend.sh  llama-model.settings.json  oxlint.config.ts  package.json  quick-check.sh  rustfmt.toml  settings.json  setup-and-validate.sh  skills-lock.json  slab-artifacts.toml  slab-libfetch.sh  slab.rs.code-workspace  test-smoke.sh  tsconfig.json  tsconfig.node.json  vitest.config.ts  vitest.frontend.config.ts  vitest.projects.ts
crates/slab-agent/: BUILD.bazel  Cargo.toml  README.md
crates/slab-agent-memories/: Cargo.toml  README.md
crates/slab-agent-memories/src/: error.rs  fs.rs  git.rs  hooks.rs  lib.rs  phase1.rs  phase2.rs  read.rs  redaction.rs  templates.rs
crates/slab-agent-tools/: BUILD.bazel  Cargo.toml  README.md
crates/slab-agent-tools/src/: apply_patch.rs  args.rs  fs.rs  fs_watch.rs  git.rs  glob.rs  grep.rs  lib.rs  mcp.rs  plan.rs  sensitive_path.rs  shell.rs  subagent.rs  task_complete.rs  verify.rs  web_search.rs
crates/slab-agent-tracing/: Cargo.toml  README.md
crates/slab-agent-tracing/src/: lib.rs
crates/slab-agent/src/: compact.rs  concurrency_gate.rs  config.rs  control.rs  error.rs  event.rs  hook.rs  lib.rs  llm_output.rs  port.rs  repetition_guard.rs  risk.rs  state.rs  tests.rs  thread.rs  tool.rs  tool_validation.rs  turn.rs  turn_tool_call.rs  turn_tool_record.rs
crates/slab-app-core/: BUILD.bazel  Cargo.toml  README.md  build.rs
crates/slab-app-core/migrations/: 20260408000000_model_kind_and_backend.sql  20260408010000_model_config_versions.sql  20260408020000_model_capabilities.sql  20260409000000_model_config_state.sql  20260410000000_ui_state.sql  20260410010000_model_downloads.sql  20260415010000_model_download_source_key.sql  20260421010000_media_tasks.sql  20260422000000_model_config_cutover.sql  20260422010000_plugin_states.sql  20260519000000_agent_thread_messages.sql  20260530000000_remove_models_provider.sql  20260530010000_task_payload_envelopes.sql  20260607000000_model_download_state.sql  20260608000000_add_storage_value_checks.sql  20260611000000_agent_memories.sql  20260611010000_agent_memory_usage_source_kind.sql  20260617000000_rebuild_model_config_state_fk.sql  20260618000000_model_config_selected_engine.sql  20260619000000_storage_contract_hardening.sql
crates/slab-app-core/src/: config.rs  error.rs  launch.rs  lib.rs  model_auto_unload.rs  runtime_supervisor.rs  tauri_bridge.rs  test_support.rs
crates/slab-apply-patch/: BUILD.bazel  Cargo.toml  README.md
crates/slab-apply-patch/src/: invocation.rs  lib.rs  local_fs.rs  main.rs  parser.rs  seek_sequence.rs  streaming_parser.rs
crates/slab-build-utils/: BUILD.bazel  Cargo.toml  README.md  build.rs
crates/slab-build-utils/src/: lib.rs  sys_bindings.rs
crates/slab-candle/: Cargo.toml  README.md
crates/slab-candle-diffusion/: Cargo.toml
crates/slab-candle-diffusion/src/: config.rs  engine.rs  error.rs  flux.rs  lib.rs  stable.rs
crates/slab-candle/src/: device.rs  lib.rs  runtime.rs
crates/slab-cloud-provider/: Cargo.toml  README.md
crates/slab-cloud-provider/src/: activation.rs  adapter_kind.rs  error.rs  lib.rs  provider.rs
slab-core/: Cargo.toml
slab-core-macros/: Cargo.toml
slab-core-macros/src/: lib.rs
slab-core-macros/tests/ui/: backend_handler_duplicate_route.rs  backend_handler_non_async.rs
slab-core/src/: inference.rs  lib.rs  main.rs  model.rs  spec.rs  task_kind.rs
slab-core/src/api/: codec.rs  mod.rs  model.rs  pipeline.rs  runtime.rs  task.rs  traits.rs  types.rs
slab-core/src/base/: error.rs  mod.rs  types.rs
slab-core/src/dispatch/: mod.rs  plan.rs  planner.rs
slab-core/src/engine/: audio_utils.rs  mod.rs
slab-core/src/handlers/: subtitle.rs
slab-core/src/model/: auto.rs  deployment.rs  mod.rs
slab-core/src/ports/: capabilities.rs  engine.rs  mod.rs
slab-core/src/routes/: subtitle.rs
slab-core/src/runtime/: builder.rs  mod.rs  orchestrator.rs  pipeline.rs  runtime.rs  stage.rs  storage.rs  tests.rs  types.rs
slab-core/src/scheduler/: kernel.rs  orchestrator.rs  pipeline.rs  stage.rs  storage.rs  tests.rs  types.rs
slab-core/src/services/: diffusion.rs  dylib.rs  ffmpeg.rs  llama.rs  mod.rs  whisper.rs  (+1 more)
slab-diffusion/: Cargo.toml
slab-diffusion-sys/: Cargo.toml  build.rs  wrapper.h
slab-diffusion/src/: context.rs  error.rs  lib.rs  params.rs  upscaler.rs
slab-libfetch/: Cargo.toml
slab-libfetch/src/: api.rs  downloader.rs  error.rs  install.rs  lib.rs  main.rs  manifest.rs  platform.rs  variant.rs  verify.rs
slab-llama/: Cargo.toml
slab-llama/src/: context_params.rs  error.rs  lib.rs  llama_adapter.rs  llama_batch.rs  llama_context.rs  llama_model.rs  llama_sampler.rs  model_params.rs
slab-proto/: Cargo.toml  build.rs
slab-proto/src/: convert.rs  lib.rs
slab-runtime/: Cargo.toml
slab-runtime/src/: main.rs
slab-server/: Cargo.toml  build.rs
slab-server/migrations/: 20240101000000_init.sql  20240101000000_initial.sql  20260223000000_init.sql  20260223000001_tasks.sql  20260223000002_chat_messages.sql  20260228000000_model_catalog.sql  20260302000000_config_store_name_and_target_dir.sql  20260311000000_add_backend_worker_config.sql  20260311001000_add_llama_context_length_config.sql  20260311002000_add_model_auto_unload_config.sql  20260311003000_add_chat_model_providers_config.sql
slab-server/src/: config.rs  error.rs  main.rs  model_auto_unload.rs  state.rs
slab-subtitle/: Cargo.toml  README.md
slab-subtitle/src/: errors.rs  lib.rs  timetypes.rs
slab-types/: Cargo.toml
slab-types/src/: backend.rs  chat.rs  common.rs  error.rs  inference.rs  lib.rs  load_config.rs  media.rs  runtime.rs
slab-whisper/: Cargo.toml
slab-whisper-sys/: Cargo.toml  build.rs
slab-whisper-sys/src/: lib.rs
slab-whisper/src/: error.rs  ggml_logging_hook.rs  lib.rs  standalone.rs  utilities.rs  whisper_ctx.rs  whisper_ctx_wrapper.rs  whisper_grammar.rs  whisper_logging_hook.rs  whisper_params.rs  whisper_vad.rs
(+2062 files in other folders)
