[workspace]
resolver = "2"
members = [
    "bin/slab-app/src-tauri",
    "bin/slab-server",
    "bin/slab-runtime",
    "crates/slab-proto",
    "crates/slab-agent",
    "crates/slab-build-utils",
    "crates/slab-diffusion", 
    "crates/slab-diffusion-sys",
    "crates/slab-libfetch",
    "crates/slab-llama",
    "crates/slab-llama-sys",
    "crates/slab-whisper",
    "crates/slab-whisper-sys",
    "crates/slab-core-macros",
    "crates/slab-app-core",
    "crates/slab-core",
    "crates/slab-types",
    "crates/slab-subtitle",
    "crates/slab-ggml",
    "crates/slab-ggml-sys",
]

exclude = [
    "packages",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
description = "slab ML"
repository = "https://github.com/Cyberhan123/slab.rs"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates
slab-runtime-core = { path = "./crates/slab-core", package = "slab-runtime-core", version = "0.0.1" }
slab-app-core     = { path = "./crates/slab-app-core", package = "slab-app-core", version = "0.0.1" }
slab-agent        = { path = "./crates/slab-agent", package = "slab-agent", version = "0.0.1" }
slab-proto        = { path = "./crates/slab-proto", package = "slab-proto", version = "0.0.1" }
slab-types        = { path = "./crates/slab-types", package = "slab-types", version = "0.0.1" }
slab-diffusion-sys = { path = "./crates/slab-diffusion-sys", package = "slab-diffusion-sys", version = "0.0.1" }
slab-diffusion    = { path = "./crates/slab-diffusion", package = "slab-diffusion", version = "0.0.1" }
slab-llama        = { path = "./crates/slab-llama", package = "slab-llama", version = "0.0.1" }
slab-llama-sys    = { path = "./crates/slab-llama-sys", package = "slab-llama-sys", version = "0.0.1" }
slab-whisper      = { path = "./crates/slab-whisper", package = "slab-whisper", version = "0.0.1" }
slab-whisper-sys  = { path = "./crates/slab-whisper-sys", package = "slab-whisper-sys", version = "0.0.1" }
slab-libfetch     = { path = "./crates/slab-libfetch", package = "slab-libfetch", version = "0.0.1" }
slab-build-utils  = { path = "./crates/slab-build-utils", package = "slab-build-utils", version = "0.0.1" }
slab-core-macros  = { path = "./crates/slab-core-macros", package = "slab-core-macros", version = "0.0.1" }
slab-subtitle     = { path = "./crates/slab-subtitle", package = "slab-subtitle", version = "0.0.1" }
slab-ggml-sys     = { path = "./crates/slab-ggml-sys", package = "slab-ggml-sys", version = "0.0.1" }
slab-ggml         = { path = "./crates/slab-ggml", package = "slab-ggml", version = "0.0.1" }

combine = "4.6.7"
anyhow = "1.0.102"
bindgen = "0.72.1"
flate2 = "1.1.9"
libloading = "0.8.9"
reqwest = { version = "0.13.2", features = ["stream", "native-tls", "json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.45"
tokio = { version = "1.50.0", features = ["full"] }
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }
hf-hub = "0.5.0"
thiserror = "2.0.18"
derive_builder = "0.20"
libc = "0.2"
bytes = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
genai = "0.5.3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ffmpeg-sidecar = { version = "2", features = ["download_ffmpeg"] }
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
tokenizers = "0.22.2"
schemars = { version = "1.2", features = ["uuid1", "chrono04"] }
sha2 = "0.11.0"
toml = "1.1.0"
# Logging / tracing
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-test = "0.2"
# Web / gRPC
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "set-header", "util"] }
tonic = { version = "0.14.5", features = ["transport"] }
tonic-build = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
prost = "0.14.3"
http = "1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
# IPC / streaming
parity-tokio-ipc = "0.9"
tokio-stream = "0.1"
# Utilities
async-trait = "0.1"
bytemuck = "1"
strum = { version = "0.28.0", features = ["derive"] }
clap = { version = "4.6.0", features = ["derive"] }
protoc-bin-vendored = "3"
cargo_metadata = "0.23.1"
