[workspace]
resolver = "2"
members = [
    "bin/slab-app/src-tauri",
    "bin/slab-windows-full-installer",
    "bin/slab-mcp-server",
    "bin/slab-server",
    "bin/slab-runtime",
    "crates/slab-proto",
    "crates/slab-agent",
    "crates/slab-agent-tools",
    "crates/slab-build-utils",
    "crates/slab-model-pack",
    "crates/slab-utils",
    "crates/slab-diffusion", 
    "crates/slab-diffusion-sys",
    "crates/slab-libfetch",
    "crates/slab-llama",
    "crates/slab-llama-sys",
    "crates/slab-whisper",
    "crates/slab-whisper-sys",
    "crates/slab-runtime-macros",
    "crates/slab-app-core",
    "crates/slab-runtime-core",
    "crates/slab-types",
    "crates/slab-subtitle",
    "crates/slab-ggml",
    "crates/slab-ggml-sys",
    "crates/slab-hub",
    "crates/slab-sandboxing",
    "crates/slab-macos-sandbox",
    "crates/slab-file",
    "crates/slab-git",
    "crates/slab-shell-command",
    "crates/slab-mcp-client",
    "crates/slab-mcp",
]

exclude = [
    "packages",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "slab ML"
repository = "https://github.com/Cyberhan123/slab.rs"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "AGPL-3.0-only"

[workspace.dependencies]
# Internal crates
slab-runtime-core = { path = "./crates/slab-runtime-core", package = "slab-runtime-core", version = "0.1.0" }
slab-app-core     = { path = "./crates/slab-app-core", package = "slab-app-core", version = "0.1.0" }
slab-agent        = { path = "./crates/slab-agent", package = "slab-agent", version = "0.1.0" }
slab-agent-tools  = { path = "./crates/slab-agent-tools", package = "slab-agent-tools", version = "0.1.0" }
slab-proto        = { path = "./crates/slab-proto", package = "slab-proto", version = "0.1.0" }
slab-model-pack   = { path = "./crates/slab-model-pack", package = "slab-model-pack", version = "0.1.0" }
slab-types        = { path = "./crates/slab-types", package = "slab-types", version = "0.1.0" }
slab-hub          = { path = "./crates/slab-hub", package = "slab-hub", version = "0.1.0" }
slab-diffusion-sys = { path = "./crates/slab-diffusion-sys", package = "slab-diffusion-sys", version = "0.1.0" }
slab-diffusion    = { path = "./crates/slab-diffusion", package = "slab-diffusion", version = "0.1.0" }
slab-llama        = { path = "./crates/slab-llama", package = "slab-llama", version = "0.1.0" }
slab-llama-sys    = { path = "./crates/slab-llama-sys", package = "slab-llama-sys", version = "0.1.0" }
slab-whisper      = { path = "./crates/slab-whisper", package = "slab-whisper", version = "0.1.0" }
slab-whisper-sys  = { path = "./crates/slab-whisper-sys", package = "slab-whisper-sys", version = "0.1.0" }
slab-libfetch     = { path = "./crates/slab-libfetch", package = "slab-libfetch", version = "0.1.0" }
slab-build-utils  = { path = "./crates/slab-build-utils", package = "slab-build-utils", version = "0.1.0" }
slab-utils        = { path = "./crates/slab-utils", package = "slab-utils", version = "0.1.0" }
slab-runtime-macros = { path = "./crates/slab-runtime-macros", package = "slab-runtime-macros", version = "0.1.0" }
slab-subtitle     = { path = "./crates/slab-subtitle", package = "slab-subtitle", version = "0.1.0" }
slab-ggml-sys     = { path = "./crates/slab-ggml-sys", package = "slab-ggml-sys", version = "0.1.0" }
slab-ggml         = { path = "./crates/slab-ggml", package = "slab-ggml", version = "0.1.0" }
slab-sandboxing   = { path = "./crates/slab-sandboxing", package = "slab-sandboxing", version = "0.1.0" }
slab-macos-sandbox = { path = "./crates/slab-macos-sandbox", package = "slab-macos-sandbox", version = "0.1.0" }
slab-file = { path = "./crates/slab-file", package = "slab-file", version = "0.1.0" }
slab-git = { path = "./crates/slab-git", package = "slab-git", version = "0.1.0" }
slab-shell-command = { path = "./crates/slab-shell-command", package = "slab-shell-command", version = "0.1.0" }
slab-mcp-client = { path = "./crates/slab-mcp-client", package = "slab-mcp-client", version = "0.1.0" }
slab-mcp = { path = "./crates/slab-mcp", package = "slab-mcp", version = "0.1.0" }
slab-mcp-server = { path = "./bin/slab-mcp-server", package = "slab-mcp-server", version = "0.1.0" }

notify = "8"
ignore = "0.4"
crossbeam-channel = "0.5"
nucleo = "0.5"
shlex = "1"
which = { version = "7", default-features = false }
dashmap = "6"
combine = "4.6.7"
anyhow = "1.0.102"
bindgen = "0.72.1"
flate2 = "1.1.9"
libloading = "0.8.9"
reqwest = { version = "0.13.3", features = ["stream", "native-tls", "json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
globset = "0.4"
dunce = "1"
minijinja = { version = "2", features = ["json"] }
tar = "0.4.45"
tokio = { version = "1.52.3", features = ["full"] }
flume = { version = "0.12.0", default-features = false, features = ["async"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
hf-hub = "0.5.0"
thiserror = "2.0.18"
derive_builder = "0.20"
libc = "0.2"
bytes = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
genai = "0.5.3"
gix = "0.83.0"
base64 = "0.22"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ffmpeg-sidecar = { version = "2", features = ["download_ffmpeg"] }
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
tokenizers = "0.23.1"
schemars = { version = "1.2", features = ["uuid1", "chrono04"] }
sha2 = "0.11.0"
toml = "1.1.0"
once_cell = "1.21.4"
similar = "3.1.0"
tempfile = "3.27.0"
pretty_assertions = "1"
portable-pty = "0.9.0"
filedescriptor = "0.8.3"
lazy_static = "1"
shared_library = "0.1.9"
ts-rs = "12.0.1"
walkdir = "2.5.0"
# Logging / tracing
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-test = "0.2"
# Web / gRPC
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "set-header", "util"] }
tonic = { version = "0.14.6", features = ["transport"] }
tonic-build = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.6"
prost = "0.14.3"
http = "1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
# IPC / streaming
parity-tokio-ipc = "0.9"
winapi = { version = "0.3.9", features = ["winerror"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.29.0"
# Utilities
async-trait = "0.1"
bytemuck = "1"
strum = { version = "0.28.0", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
protoc-bin-vendored = "3"
cargo_metadata = "0.23.1"
sysinfo = "0.39.2"
# GUI
egui = "0.34.2"
eframe = { version = "0.34.2", default-features = false, features = ["default_fonts", "glow"] }

# Platform-specific dependencies
windows = { version = "0.62.2", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
landlock = "0.4"
