module(
    name = "slab",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_rust", version = "0.70.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "ffmpeg_windows_x64",
    build_file_content = """
package(default_visibility = ["//visibility:public"])

filegroup(
    name = "sdk",
    srcs = glob(
        ["**"],
        exclude = [
            "BUILD",
            "BUILD.bazel",
        ],
    ),
)
""",
    integrity = "sha256-rTiU3ku5zUR0CcdgzhRavb4Q0xFU0Vr/4wkNPECJftc=",
    strip_prefix = "ffmpeg-n8.1-latest-win64-gpl-shared-8.1",
    urls = ["https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-n8.1-latest-win64-gpl-shared-8.1.zip"],
)

single_version_override(
    module_name = "rules_rust",
    patch_strip = 1,
    patches = [
        "//third_party/bazel/patches:rules_rust_crate_universe_path_crates.patch",
    ],
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.95.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.annotation(
    crate = "deno_io",
    patch_args = ["-p1"],
    patches = ["//third_party/rust/patches:deno_io-0.158.0.patch"],
    version = "0.158.0",
)
crate.annotation(
    crate = "ed448",
    patch_args = ["-p1"],
    patches = ["//third_party/rust/patches:ed448-0.5.0-rc.3.patch"],
    version = "0.5.0-rc.3",
)
crate.annotation(
    crate = "ed448-goldilocks",
    patch_args = ["-p1"],
    patches = ["//third_party/rust/patches:ed448-goldilocks-0.14.0-pre.10.patch"],
    version = "0.14.0-pre.10",
)
crate.annotation(
    build_script_data = ["@@+http_archive+ffmpeg_windows_x64//:sdk"],
    build_script_env = {
        "FFMPEG_DIR": "$${pwd}/external/+http_archive+ffmpeg_windows_x64",
    },
    crate = "ffmpeg-sys-next",
    patch_args = ["-p1"],
    patches = ["//third_party/rust/patches:ffmpeg-sys-next-8.1.0.patch"],
    version = "8.1.0",
)
crate.annotation(
    crate = "khronos_api",
    patch_args = ["-p1"],
    patches = ["//third_party/rust/patches:khronos_api-3.1.0.patch"],
    version = "3.1.0",
)
crate.annotation(
    build_script_env = {
        "PYO3_NO_PYTHON": "1",
    },
    crate = "pyo3-build-config",
    version = "0.28.3",
)
crate.annotation(
    crate = "v8",
    patch_args = ["-p1"],
    patches = ["//third_party/rust/patches:v8-149.0.0.patch"],
    version = "149.0.0",
)
crate.annotation(
    additive_build_file_content = "exports_files([\"src/lib.rs\"])",
    crate = "wasmtime-internal-versioned-export-macros",
    override_target_proc_macro = "//third_party/rust/overrides:wivem",
    version = "41.0.4",
)
crate.from_cargo(
    name = "crates",
    cargo_config = "//:.cargo/config.bazel.toml",
    cargo_lockfile = "//:Cargo.lock",
    isolated = True,
    manifests = ["//:Cargo.toml"],
    supported_platform_triples = [
        "x86_64-pc-windows-msvc",
        "x86_64-unknown-linux-gnu",
        "aarch64-apple-darwin",
    ],
)
crate.render_config(
    generate_target_compatible_with = True,
    repositories = ["crates"],
)
use_repo(
    crate,
    "crates",
    "crates__wasmtime-internal-versioned-export-macros-41.0.4",
)
