[package]
name = "slab-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license = "AGPL-3.0-only"

[build-dependencies]
slab-libfetch = { workspace = true }


[features]
default = ["all"]
all = ["candle", "onnx","ggml"]
candle = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
]
onnx = ["dep:ort"]
ggml = ["dep:slab-whisper", "dep:slab-llama", "dep:slab-diffusion"]

[dependencies]
slab-core-macros = { workspace = true }
libloading = { workspace = true }
slab-whisper = { workspace = true }
slab-llama = { workspace = true }
slab-diffusion = { workspace = true }
tokio = { workspace = true }
slab-libfetch = { workspace = true }
hf-hub = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.8.8", features = ["macros"] }
tracing-subscriber = "0.3.22"
tracing = "0.1"
anyhow = "1.0.101"
bytemuck = "1.25.0"
subparse = "0.7.0"
tracing-test = "0.2.6"
bytes = { workspace = true }
futures = { workspace = true }
strum = { version = "0.28.0", features = ["derive", "strum_macros"] }
strum_macros = "0.28.0"
async-trait = "0.1.89"
base64 = { workspace = true }
image = { workspace = true }
ort = { workspace = true, optional = true }
