[package]
name = "slab-diffusion"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[build-dependencies]
slab-libfetch = { workspace = true }
bindgen = { workspace = true }
tokio = { workspace = true }

[dependencies]
libloading = { workspace = true }
slab-diffusion-sys = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }