[package]
name = "slab-libfetch"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.101"
flate2 = "1.1.9"
reqwest = { version = "0.13.2", features = ["stream", "native-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.44"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
