[package]
name = "slab-libfetch"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
# NOTE: Only deflate-compressed ZIP archives are supported. Other compression
# methods (e.g., bzip2, LZMA) are not enabled to avoid a link conflict with
# the lzma-sys crate already pulled in by ffmpeg-sidecar in this workspace.
zip = { workspace = true }
