[package]
name = "slab-llama"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
slab-llama-sys = { workspace = true }
libloading = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
