[package]
name = "slab-proto"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[build-dependencies]
tonic-prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
image = { workspace = true }
slab-types = { workspace = true }
