[package]
name = "slab-server"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[[bin]]
name = "slab-server"
path = "src/main.rs"

[build-dependencies]
slab-libfetch = { workspace = true }
tonic-build = "0.12"
protoc-bin-vendored = "3"

[dependencies]
# Core AI runtime
slab-core     = { workspace = true }
slab-libfetch = { workspace = true }
hf-hub        = { workspace = true }

# Async runtime
tokio   = { workspace = true }
futures = { workspace = true }
bytes   = { workspace = true }
tokio-stream = "0.1"

# Web framework + middleware
axum       = { version = "0.8", features = ["macros", "multipart"] }
tower      = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "set-header","util"] }
http = "1.4.0"
http-body-util = "0.1.3"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }

# Database (SQLite; swappable via trait)
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate", "chrono", "uuid", "_sqlite"] }

# IDs & time
uuid   = { workspace = true }
chrono = { workspace = true }

# OpenAPI / Swagger
utoipa            = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum       = { version = "0.2" }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = { workspace = true }
anyhow    = { workspace = true }

# Misc
base64    = "0.22"
bytemuck  = "1"
strum = "0.28.0"
clap = { version = "4.5.60", features = ["derive"] }
